[gd_scene load_steps=19 format=3 uid="uid://dm8gngpvdasyo"]

[ext_resource type="PackedScene" uid="uid://uq4e4sun6kp1" path="res://scenes/basic_enemy_template.tscn" id="1_ht6kk"]
[ext_resource type="Script" path="res://scripts/enemies/fire_worm.gd" id="2_wmqgt"]
[ext_resource type="Texture2D" uid="uid://bx0f4xmuba3po" path="res://graphics/spritesheets/fire_worm.png" id="3_gwuwy"]
[ext_resource type="Script" path="res://scripts/enemies/worm_idle_state.gd" id="4_5n380"]
[ext_resource type="Script" path="res://scripts/enemies/worm_patrol_state.gd" id="5_22rsu"]
[ext_resource type="Script" path="res://scripts/enemies/basic_attack_state.gd" id="6_u5cxd"]
[ext_resource type="Script" path="res://scripts/enemies/basic_hurt_state.gd" id="7_qcno8"]
[ext_resource type="Script" path="res://scripts/enemies/basic_die_state.gd" id="8_fufmh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q8o8l"]
resource_local_to_scene = true
size = Vector2(34, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ww44w"]
resource_local_to_scene = true
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73lb7"]
resource_local_to_scene = true
size = Vector2(40, 28)

[sub_resource type="Animation" id="Animation_lur7g"]
resource_name = "Attack"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/AttackBox/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/AttackBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(37, -19)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_fireball"
}]
}

[sub_resource type="Animation" id="Animation_s0gyc"]
resource_name = "Die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69, 70, 71]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_drtjc"]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.984314, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ki6m4"]
resource_name = "Idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3vqnh"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/AttackBox/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 14)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/AttackBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(37, -19)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pivot/Sprite2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/Hurtbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_aofsk"]
resource_name = "Walk"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtg60"]
_data = {
"Attack": SubResource("Animation_lur7g"),
"Die": SubResource("Animation_s0gyc"),
"Hurt": SubResource("Animation_drtjc"),
"Idle": SubResource("Animation_ki6m4"),
"RESET": SubResource("Animation_3vqnh"),
"Walk": SubResource("Animation_aofsk")
}

[node name="FireWorm" instance=ExtResource("1_ht6kk")]
script = ExtResource("2_wmqgt")
turn_probability = 0.25
turn_interval = 4.0
SPEED = 24
max_hp = 7
affinity = 0
sprite_height = 30

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("RectangleShape2D_q8o8l")

[node name="Sprite2D" parent="Pivot" index="0"]
texture = ExtResource("3_gwuwy")
offset = Vector2(0, -13)
hframes = 16
vframes = 5

[node name="GapDetector" parent="Pivot" index="1"]
position = Vector2(24, -3)

[node name="WallDetector" parent="Pivot" index="2"]
target_position = Vector2(31, 0)

[node name="PlayerDetector" parent="Pivot" index="3"]
position = Vector2(45, -10)
target_position = Vector2(212, 0)

[node name="ClosePlayerDetector" type="RayCast2D" parent="Pivot" index="4"]
position = Vector2(20, -10)
target_position = Vector2(23, 0)
collision_mask = 8

[node name="FireballSpawnPoint" type="Marker2D" parent="Pivot" index="5"]
position = Vector2(37, -19)

[node name="AttackBox" parent="Pivot" index="6" node_paths=PackedStringArray("attacker")]
attacker = NodePath("../..")

[node name="CollisionShape2D" parent="Pivot/AttackBox" index="0"]
position = Vector2(37, -19)
shape = SubResource("RectangleShape2D_ww44w")
disabled = false

[node name="CollisionShape2D" parent="Pivot/Hurtbox" index="0"]
position = Vector2(-2, -14)
shape = SubResource("RectangleShape2D_73lb7")

[node name="FiniteStateMachine" parent="." index="2" node_paths=PackedStringArray("current_state")]
current_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="FiniteStateMachine" index="0"]
script = ExtResource("4_5n380")

[node name="PatrolState" type="Node" parent="FiniteStateMachine" index="1"]
script = ExtResource("5_22rsu")

[node name="AttackState" type="Node" parent="FiniteStateMachine" index="2"]
script = ExtResource("6_u5cxd")

[node name="HurtState" type="Node" parent="FiniteStateMachine" index="3"]
script = ExtResource("7_qcno8")

[node name="DieState" type="Node" parent="FiniteStateMachine" index="4"]
script = ExtResource("8_fufmh")

[node name="RestTimer" parent="." index="3"]
wait_time = 0.75

[node name="ForgetTimer" type="Timer" parent="." index="5"]
wait_time = 20.0
one_shot = true

[node name="HealthBar" parent="." index="6"]
offset_top = -48.0
offset_bottom = -42.0

[node name="AnimationPlayer" parent="." index="8"]
libraries = {
"": SubResource("AnimationLibrary_vtg60")
}

[connection signal="died" from="FiniteStateMachine/DieState" to="." method="_on_die_state_died"]
[connection signal="timeout" from="ForgetTimer" to="." method="_on_forget_timer_timeout"]

[editable path="Pivot/AttackBox"]
