[gd_scene load_steps=22 format=3 uid="uid://dga42878dle6m"]

[ext_resource type="Script" path="res://scripts/enemies/skeleton.gd" id="1_1qqlp"]
[ext_resource type="Script" path="res://scripts/hurtbox.gd" id="2_0marw"]
[ext_resource type="Texture2D" uid="uid://bqlexpr4k6vdp" path="res://graphics/spritesheets/skeleton_spritesheet.png" id="2_x5wjs"]
[ext_resource type="Script" path="res://scripts/fsm.gd" id="3_hygjd"]
[ext_resource type="PackedScene" uid="uid://dhber54gts68q" path="res://scenes/attack_box.tscn" id="3_sv44q"]
[ext_resource type="Script" path="res://scripts/enemies/basic_patrol_state.gd" id="5_4puj2"]
[ext_resource type="Script" path="res://scripts/enemies/basic_attack_state.gd" id="6_rrgkt"]
[ext_resource type="Script" path="res://scripts/enemies/basic_die_state.gd" id="7_p0avi"]
[ext_resource type="Script" path="res://scripts/enemies/revive_state.gd" id="8_21bx7"]
[ext_resource type="Script" path="res://scripts/enemies/basic_idle_state.gd" id="9_oxu7o"]
[ext_resource type="Script" path="res://scripts/enemies/basic_hurt_state.gd" id="11_l7dwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrsvg"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awdmh"]
resource_local_to_scene = true
size = Vector2(12, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aah2j"]
resource_local_to_scene = true
size = Vector2(12, 42)

[sub_resource type="Animation" id="Animation_cbrre"]
resource_name = "Attack"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_nvwyi"]
resource_name = "Die"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Marker2D/AttackBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s1q32"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_yt5rj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_chpvf"]
resource_name = "Walk"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Marker2D/AttackBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7fji3"]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Marker2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [52, 53, 54]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3d2q"]
_data = {
"Attack": SubResource("Animation_cbrre"),
"Die": SubResource("Animation_nvwyi"),
"Hurt": SubResource("Animation_7fji3"),
"Idle": SubResource("Animation_s1q32"),
"RESET": SubResource("Animation_yt5rj"),
"Walk": SubResource("Animation_chpvf")
}

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_1qqlp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_hrsvg")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
texture_filter = 1
texture = ExtResource("2_x5wjs")
offset = Vector2(0, -16)
hframes = 13
vframes = 5

[node name="GapDetector" type="RayCast2D" parent="Marker2D"]
position = Vector2(11, 0)
target_position = Vector2(0, 15)

[node name="WallDetector" type="RayCast2D" parent="Marker2D"]
position = Vector2(6, -24)
target_position = Vector2(10, 0)

[node name="PlayerDetector" type="RayCast2D" parent="Marker2D"]
position = Vector2(0, -25)
exclude_parent = false
target_position = Vector2(25, 0)
collision_mask = 8

[node name="AttackBox" parent="Marker2D" node_paths=PackedStringArray("attacker") instance=ExtResource("3_sv44q")]
collision_layer = 2
attacker = NodePath("../..")

[node name="CollisionShape2D" parent="Marker2D/AttackBox" index="0"]
shape = SubResource("RectangleShape2D_awdmh")
disabled = false

[node name="Hurtbox" type="Area2D" parent="." node_paths=PackedStringArray("target")]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource("2_0marw")
target = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -21)
shape = SubResource("RectangleShape2D_aah2j")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("3_hygjd")
current_state = NodePath("PatrolState")

[node name="IdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("9_oxu7o")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="PatrolState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("5_4puj2")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="AttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("6_rrgkt")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="DieState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("7_p0avi")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="ReviveState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("8_21bx7")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="HurtState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "pivot")]
script = ExtResource("11_l7dwb")
actor = NodePath("../..")
animator = NodePath("../../AnimationPlayer")
pivot = NodePath("../../Marker2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x3d2q")
}

[node name="RestTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-10, -30)
rect = Rect2(-10, -10, 40, 40)

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/AttackState" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/DieState" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/ReviveState" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="FiniteStateMachine/HurtState" method="_on_animation_player_animation_finished"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="Marker2D/AttackBox"]
